# unreal_caffe

./: .gitignore  CMakeLists.txt  Makefile.config  README.md  README_en.md  a.out  generatepb.sh  install_depencies.sh
.build_release/cuda/src/caffe/layers/: absval_layer.d  base_data_layer.d  batch_norm_layer.d  batch_reindex_layer.d  bias_layer.d  bnll_layer.d  box_annotator_ohem_layer.d  concat_layer.d  contrastive_loss_layer.d  conv_layer.d  crop_layer.d  cudnn_conv_layer.d  cudnn_lcn_layer.d  cudnn_lrn_layer.d  cudnn_pooling_layer.d  cudnn_relu_layer.d  cudnn_sigmoid_layer.d  cudnn_softmax_layer.d  cudnn_tanh_layer.d  deconv_layer.d  dropout_layer.d  eltwise_layer.d  elu_layer.d  (+35 more)
.build_release/examples/unreal_example/src/: main.d
.build_release/src/caffe/: net.d
.build_release/src/caffe/layers/: box_annotator_ohem_layer.d  cudnn_softmax_layer.d  infogain_loss_layer.d  inner_product_blob_layer.d  psroi_pooling_layer.d  roi_pooling_layer.d  smooth_L1_loss_ohem_layer.d  smooth_l1_loss_layer.d  softmax_loss_ohem_layer.d
.build_release/src/caffe/proto/: caffe.pb.cc  caffe.pb.h
.build_release/src/caffe/util/: blocking_queue.d  db_leveldb.d
examples/unreal_example/: CMakeLists.txt  readme.md
examples/unreal_example/src/: main.cpp
include/caffe/layers/: proposal_layer.hpp
include/caffe/util/: cudnn.hpp
python/: .gitignore
python/caffe/proto/: caffe_pb2.py
src/caffe/: net.cpp
src/caffe/layers/: dense_image_data_layer.cpp.bk  proposal_layer.cpp.bk  proposal_layer.cu.bk
src/caffe/proto/: caffe.pb.cc  caffe.pb.h  caffe.proto
tools/: caffe_pb2.py
(+8 files in other folders)
